# daywma

./: CHANGELOG.md  README.md  daywma.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Host.hs  Publish.hs
