cabal-version:      3.0
name:               daywma
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             RahulNavneeth
maintainer:         rahulmnavneeth@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common common-options

library
    import:           warnings
    exposed-modules:  Host,
					  Publish
    build-depends:    base ^>=4.17.2.1,
	                  scotty,
					  text,
					  aeson,
					  http-conduit,
					  persistent,
					  persistent-template,
					  async,
					  process,
    hs-source-dirs:   src
    default-language: Haskell2010

executable daywma
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1,
                      daywma
    hs-source-dirs:   app
    default-language: Haskell2010
